Fri Dec 20 06:48:49 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu Dec 19 09:23:01 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/deprecation.rst: Update example version to a more recent one.

Thu Dec 19 09:22:17 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/backendmanager_multi.cc: Fix comment typo.

Thu Dec 19 09:18:50 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_table.cc,backends/chert/chert_table.cc,
	  backends/flint/flint_table.cc,tests/api_backend.cc: Fix handling of
	  invalid block sizes - the size gets fixed as documented, but the
	  uncorrected size was passed to the base file.  Also, abort() was
	  called on 0.

Thu Dec 19 08:50:33 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/runtest.in: Report if a test is being run under eatmydata,
	  like we do for running under valgrind.

Thu Dec 19 08:47:05 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_version.h,backends/chert/chert_version.h,
	  backends/flint/flint_version.h: Comment out unused set_uuid() and
	  set_uuid_string() methods - they may be useful in future, but we
	  aren't currently using them.  Also make set_uuid() take a const
	  pointer.

Thu Dec 19 08:41:02 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* HACKING,configure.ac,tests/runtest.in: Automatically probe for and
	  hook in eatmydata to the testsuite using the wrapper script it now
	  includes.

Thu Dec 19 08:22:16 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* HACKING: Update website update info.

Mon Dec 16 10:40:12 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/msetcmp.cc: Fix sense of reverse parameter to
	  Enquire::set_sort_by_relevance_then_value.  Reported by "boomboo" on
	  IRC.
	* tests/api_db.cc: Fix testcase sortrel1.
